--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="ok">確定</string>
     <string name="menuAbout">關於</string>
     <string name="aboutTiis">Powered by TIIS. \nAll rights reserved.</string>
+    <string name="labelFaceRegistration">人臉註冊</string>
 </resources>
